reestructuration+added support of cmake

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,6 @@
         "stdint.h": "c",
         "limits.h": "c",
         "chapter3.h": "c"
-    }
+    },
+    "cmake.sourceDirectory": "${workspaceFolder}/K-R-solutions"
 }
