--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,6 @@
         "limits.h": "c",
         "chapter3.h": "c"
     },
-    "cmake.sourceDirectory": "${workspaceFolder}/K-R-solutions"
+    "cmake.sourceDirectory": "${workspaceFolder}/K-R-solutions",
+    "cmake.buildDirectory" : "${workspaceFolder}/K-R-solutions/build/${buildType}"
 }
