-enhanced explanations and examples -update some configs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,8 +17,7 @@
         "sdkconfig": "c",
         "stdio.h": "c",
         "stdint.h": "c",
-        "limits.h": "c",
-        "chapter3.h": "c"
+        "limits.h": "c"
     },
     "cmake.sourceDirectory": "${workspaceFolder}/K-R-solutions",
     "cmake.buildDirectory" : "${workspaceFolder}/K-R-solutions/build/${buildType}"
