added library with cmake

--- a/K-R-solutions/CMakeLists.txt
+++ b/K-R-solutions/CMakeLists.txt
@@ -10,10 +10,23 @@ message(STATUS "Build executables in: ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
 set(CH03_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ch03)
 
 
-# Create the target
+
+# Create the executables
 add_executable(ex3_1 ${CH03_DIR}/ex3_1.c)
 add_executable(ex3_2 ${CH03_DIR}/ex3_2.c)
 add_executable(ex3_3 ${CH03_DIR}/ex3_3.c)
 add_executable(ex3_4 ${CH03_DIR}/ex3_4.c)
 add_executable(ex3_5 ${CH03_DIR}/ex3_5.c)
 add_executable(ex3_6 ${CH03_DIR}/ex3_6.c)
+
+# Add subdirectory to the build
+add_subdirectory(utils)
+
+
+# Linkg library to executables
+target_link_libraries(ex3_4 utils)
+target_link_libraries(ex3_5 utils)
+
+# Include directory to executables (for header files)
+target_include_directories(ex3_4 PRIVATE utils)
+target_include_directories(ex3_5 PRIVATE utils)
