added solution to ex4.1

--- a/K-R-solutions/CMakeLists.txt
+++ b/K-R-solutions/CMakeLists.txt
@@ -8,6 +8,7 @@ message(STATUS "Build executables in: ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
 
 # Source directories
 set(CH03_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ch03)
+set(CH04_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ch04)
 
 # Create the executables
 add_executable(ex3_1 ${CH03_DIR}/ex3_1.c)
@@ -16,16 +17,22 @@ add_executable(ex3_3 ${CH03_DIR}/ex3_3.c)
 add_executable(ex3_4 ${CH03_DIR}/ex3_4.c)
 add_executable(ex3_5 ${CH03_DIR}/ex3_5.c)
 add_executable(ex3_6 ${CH03_DIR}/ex3_6.c)
+add_executable(ex4_1 ${CH04_DIR}/ex4_1.c)
+
 
 # Add subdirectory to the build
 add_subdirectory(utils)
 
-# Linkg library to executables
+# Link library to executables
+target_link_libraries(ex3_3 utils)
 target_link_libraries(ex3_4 utils)
 target_link_libraries(ex3_5 utils)
 target_link_libraries(ex3_6 utils)
+target_link_libraries(ex4_1 utils)
 
 # Include directory to executables (for header files)
+target_include_directories(ex3_3 PRIVATE utils)
 target_include_directories(ex3_4 PRIVATE utils)
 target_include_directories(ex3_5 PRIVATE utils)
 target_include_directories(ex3_6 PRIVATE utils)
+target_include_directories(ex4_1 PRIVATE utils)
