almost finished chapter 4, (ex4_6 left)

--- a/K-R-solutions/CMakeLists.txt
+++ b/K-R-solutions/CMakeLists.txt
@@ -20,6 +20,13 @@ add_executable(ex3_6 ${CH03_DIR}/ex3_6.c)
 add_executable(ex4_1 ${CH04_DIR}/ex4_1.c)
 add_executable(ex4_2 ${CH04_DIR}/ex4_2.c)
 add_executable(ex4_3 ${CH04_DIR}/ex4_3.c)
+add_executable(ex4_4 ${CH04_DIR}/ex4_4.c)
+add_executable(ex4_5 ${CH04_DIR}/ex4_5.c)
+#add_executable(ex4_6 ${CH04_DIR}/ex4_6.c)
+add_executable(ex4_7 ${CH04_DIR}/ex4_7.c)
+add_executable(ex4_8 ${CH04_DIR}/ex4_8.c)
+add_executable(ex4_9 ${CH04_DIR}/ex4_9.c)
+add_executable(ex4_10 ${CH04_DIR}/ex4_10.c)
 
 
 # Add subdirectory to the build
@@ -32,6 +39,7 @@ target_link_libraries(ex3_5 utils)
 target_link_libraries(ex3_6 utils)
 target_link_libraries(ex4_1 utils)
 target_link_libraries(ex4_2 utils)
+target_link_libraries(ex4_10 utils)
 
 # Include directory to executables (for header files)
 target_include_directories(ex3_3 PRIVATE utils)
@@ -40,3 +48,4 @@ target_include_directories(ex3_5 PRIVATE utils)
 target_include_directories(ex3_6 PRIVATE utils)
 target_include_directories(ex4_1 PRIVATE utils)
 target_include_directories(ex4_2 PRIVATE utils)
+target_include_directories(ex4_10 PRIVATE utils)
