--- a/K-R-solutions/CMakeLists.txt
+++ b/K-R-solutions/CMakeLists.txt
@@ -22,7 +22,7 @@ add_executable(ex4_2 ${CH04_DIR}/ex4_2.c)
 add_executable(ex4_3 ${CH04_DIR}/ex4_3.c)
 add_executable(ex4_4 ${CH04_DIR}/ex4_4.c)
 add_executable(ex4_5 ${CH04_DIR}/ex4_5.c)
-#add_executable(ex4_6 ${CH04_DIR}/ex4_6.c)
+add_executable(ex4_6 ${CH04_DIR}/ex4_6.c)
 add_executable(ex4_7 ${CH04_DIR}/ex4_7.c)
 add_executable(ex4_8 ${CH04_DIR}/ex4_8.c)
 add_executable(ex4_9 ${CH04_DIR}/ex4_9.c)
