--- a/K-R-solutions/CMakeLists.txt
+++ b/K-R-solutions/CMakeLists.txt
@@ -45,6 +45,9 @@ target_link_libraries(ex3_5 utils)
 target_link_libraries(ex3_6 utils)
 target_link_libraries(ex4_1 utils)
 target_link_libraries(ex4_2 utils)
+target_link_libraries(ex4_3 utils)
+target_link_libraries(ex4_5 utils)
+target_link_libraries(ex4_7 utils)
 target_link_libraries(ex4_10 utils)
 target_link_libraries(ex5_1 utils)
 
@@ -55,5 +58,8 @@ target_include_directories(ex3_5 PRIVATE utils)
 target_include_directories(ex3_6 PRIVATE utils)
 target_include_directories(ex4_1 PRIVATE utils)
 target_include_directories(ex4_2 PRIVATE utils)
+target_include_directories(ex4_3 PRIVATE utils)
+target_include_directories(ex4_5 PRIVATE utils)
+target_include_directories(ex4_7 PRIVATE utils)
 target_include_directories(ex4_10 PRIVATE utils)
 target_include_directories(ex5_1 PRIVATE utils)
