--- a/K-R-solutions/CMakeLists.txt
+++ b/K-R-solutions/CMakeLists.txt
@@ -46,6 +46,7 @@ target_link_libraries(ex3_6 utils)
 target_link_libraries(ex4_1 utils)
 target_link_libraries(ex4_2 utils)
 target_link_libraries(ex4_3 utils)
+target_link_libraries(ex4_4 utils)
 target_link_libraries(ex4_5 utils)
 target_link_libraries(ex4_7 utils)
 target_link_libraries(ex4_10 utils)
@@ -59,6 +60,7 @@ target_include_directories(ex3_6 PRIVATE utils)
 target_include_directories(ex4_1 PRIVATE utils)
 target_include_directories(ex4_2 PRIVATE utils)
 target_include_directories(ex4_3 PRIVATE utils)
+target_include_directories(ex4_4 PRIVATE utils)
 target_include_directories(ex4_5 PRIVATE utils)
 target_include_directories(ex4_7 PRIVATE utils)
 target_include_directories(ex4_10 PRIVATE utils)
