--- a/K-R-solutions/CMakeLists.txt
+++ b/K-R-solutions/CMakeLists.txt
@@ -34,6 +34,8 @@ add_executable(ex4_13 ${CH04_DIR}/ex4_13.c)
 add_executable(ex4_14 ${CH04_DIR}/ex4_14.c)
 add_executable(ex5_1 ${CH05_DIR}/ex5_1.c)
 add_executable(ex5_2 ${CH05_DIR}/ex5_2.c)
+add_executable(ex5_3 ${CH05_DIR}/ex5_3.c)
+add_executable(ex5_4 ${CH05_DIR}/ex5_4.c)
 
 # Add subdirectory to the build
 add_subdirectory(utils)
@@ -52,6 +54,8 @@ target_link_libraries(ex4_7 utils)
 target_link_libraries(ex4_10 utils)
 target_link_libraries(ex5_1 utils)
 target_link_libraries(ex5_2 utils)
+target_link_libraries(ex5_3 utils)
+target_link_libraries(ex5_4 utils)
 
 # Include directory to executables (for header files)
 target_include_directories(ex3_3 PRIVATE utils)
@@ -67,3 +71,5 @@ target_include_directories(ex4_7 PRIVATE utils)
 target_include_directories(ex4_10 PRIVATE utils)
 target_include_directories(ex5_1 PRIVATE utils)
 target_include_directories(ex5_2 PRIVATE utils)
+target_include_directories(ex5_3 PRIVATE utils)
+target_include_directories(ex5_4 PRIVATE utils)
