-added exercises: 5_5, 5_7, 5_8, 5_9. -exercise 5_6 for later.

--- a/K-R-solutions/CMakeLists.txt
+++ b/K-R-solutions/CMakeLists.txt
@@ -36,6 +36,11 @@ add_executable(ex5_1 ${CH05_DIR}/ex5_1.c)
 add_executable(ex5_2 ${CH05_DIR}/ex5_2.c)
 add_executable(ex5_3 ${CH05_DIR}/ex5_3.c)
 add_executable(ex5_4 ${CH05_DIR}/ex5_4.c)
+add_executable(ex5_5 ${CH05_DIR}/ex5_5.c)
+add_executable(ex5_6 ${CH05_DIR}/ex5_6/main.c ${CH05_DIR}/ex5_6/functions.c)
+add_executable(ex5_7 ${CH05_DIR}/ex5_7.c)
+add_executable(ex5_8 ${CH05_DIR}/ex5_8.c)
+add_executable(ex5_9 ${CH05_DIR}/ex5_9.c)
 
 # Add subdirectory to the build
 add_subdirectory(utils)
@@ -56,6 +61,7 @@ target_link_libraries(ex5_1 utils)
 target_link_libraries(ex5_2 utils)
 target_link_libraries(ex5_3 utils)
 target_link_libraries(ex5_4 utils)
+target_link_libraries(ex5_7 utils)
 
 # Include directory to executables (for header files)
 target_include_directories(ex3_3 PRIVATE utils)
@@ -73,3 +79,4 @@ target_include_directories(ex5_1 PRIVATE utils)
 target_include_directories(ex5_2 PRIVATE utils)
 target_include_directories(ex5_3 PRIVATE utils)
 target_include_directories(ex5_4 PRIVATE utils)
+target_include_directories(ex5_7 PRIVATE utils)
